[tool.poetry]
name = "repl_python3_Hadithmania-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.1"
discord = "^1.7.3"
Flask = "^2.0.2"
python-bidi = "^0.4.2"
arabic-reshaper = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
